K8s/base/frauddetection/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frauddetectionservice
  labels:
    app: frauddetectionservice
    app.kubernetes.io/version: "1.12.0"
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: frauddetectionservice
  template:
    metadata:
      labels:
        app: frauddetectionservice
    spec:
      serviceAccountName: frauddetectionservice
      automountServiceAccountToken: false
      containers:
        - name: frauddetectionservice
          image: ghcr.io/open-telemetry/demo:1.12.0-frauddetectionservice
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "150Mi"
            limits:
              cpu: "200m"
              memory: "300Mi"
